--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   # pre commit hooks to format and lint dart code
   dart_pre_commit: ^5.4.4
+  # Used to help checking if objects are equal
+  equatable: ^2.0.7
+  flutter:
+    sdk: flutter
+  # For state management
+  flutter_bloc: ^9.1.0
+  # Service Locator, to get dependencies
+  get_it: ^8.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
