--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,16 +46,13 @@ dependencies:
   # Service Locator, to get dependencies
   get_it: ^8.0.3
 dev_dependencies:
+  # Bloc tests
+  bloc_test: ^10.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  # Mocking dependencies
+  mocktail: ^1.0.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
