--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,13 @@ dependencies:
     sdk: flutter
   # For state management
   flutter_bloc: ^9.1.0
+  # Secure storage
+  flutter_secure_storage: ^9.2.4
   # Service Locator, to get dependencies
   get_it: ^8.0.3
   # Network calls
   http: ^1.3.0
+
 dev_dependencies:
   # Bloc tests
   bloc_test: ^10.0.0
