--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,15 +49,20 @@ dependencies:
   get_it: ^8.0.3
   # Network calls
   http: ^1.3.0
-
+  # Annotations
+  json_annotation: ^4.9.0
 dev_dependencies:
   # Bloc tests
   bloc_test: ^10.0.0
+  # Build runner for generating part files
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   # Mocking dependencies
   mocktail: ^1.0.4
+  # Json serialization
+  json_serializable: ^6.9.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
